1998-10-27  Marc Horowitz  <marc@mit.edu>

	* asn1buf.c (asn1buf_sync): interoperation testing against heimdal
	revealed a bug.  if extra fields are present in a SEQUENCE, they
	are not ignored and skipped.  This caused the decoder to get out
	of sync.

Thu Jul  2 15:30:25 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* asn1_encode.c: Make the magic Macintosh EPOCH offset be 70 years
 		instead of 66 years, since CodeWarrior Pro 2 now bases
 		everything off of 1900.

Thu Apr 16 17:01:27 1998  Tom Yu  <tlyu@mit.edu>

	* asn1_encode.c (asn1_encode_generaltime): Sanity check the return
	from gmtime() to avoid overruns.

Fri Feb 27 18:03:33 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Changed thisconfigdir to point at the lib/krb5
 		directory, since we've moved the configure.in tests in
 		this directory to the toplevel lib/krb5 configure.in

Wed Feb 18 16:18:46 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Fri Feb 13 22:32:06 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* asn1buf.h (asn1buf_insert_octet): Use static inline function to
		define asn1_insert_octet, since the GCC specific hack
		we're using doesn't work on GCC compilers that also have 
		Objective C enabled.

	* asn1buf.c: define ASN1BUF_OMIT_INLINE_FUNCS before including
		asn1buf.h, since we don't want inline functions declared
		when we're defining the linkable version of the functions.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Fri Jan  2 21:18:30 1998  Tom Yu  <tlyu@mit.edu>

	* asn1buf.c (asn12krb5_buf): Check return value of
	malloc. [krb5-libs/518]

Tue Sep 30 19:03:34 1997  Tom Yu  <tlyu@mit.edu>

	* krbasn1.h: Replace HAS_STDLIB_H with something more sane.

Thu Jul 31 15:38:10 1997  Ezra Peisach  <epeisach@kangaroo.mit.edu>

        * asn1buf.h (asn1buf_remove_octet, asn1buf_size, asn1buf_free,