@@ -1,3 +1,10 @@
+Thu Dec  3 19:41:06 1998  Tom Yu  <tlyu@mit.edu>
+
+	* asn1_k_decode.c (asn1_decode_krb5_flags): Modify to deal with
+	BIT STRING values that are not exactly 32 bits.  Throw away bits
+	beyond number 31 in a bit string for now.  Deal with masking out
+	unused bits.
+
 1998-10-27  Marc Horowitz  <marc@mit.edu>
 
 	* asn1buf.c (asn1buf_sync): interoperation testing against heimdal
